# PQ-MPC

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: FindGMP.cmake
emp-tool/: CMakeLists.txt  emp-tool.h
emp-tool/circuits/: batcher.h  bit.h  bit.hpp  circuit_file.h  float32_circuit.h  float_circuit.h  float_circuit.hpp  integer.h  integer.hpp
emp-tool/cmake/: source_of_randomness.cmake
emp-tool/execution/: circuit_execution.h  protocol_execution.h
emp-tool/io/: net-io.h
emp-tool/utils/: aes-ni.h  block.h  constants.h  prg.h  utils.h
pq-ot/: CMakeLists.txt  io-thread.h  pq-ot.cpp  pq-ot.h  pq-otmain.cpp  pq-otmain.h
pq-yao/: CMakeLists.txt  emp-sh2pc.h  garble-gates.cpp  garble-gates.h  garble_gates.h  gate-eva.h  gate-gen.h  gate_eva.h  gate_gen.h  semihonest-eva.h  semihonest-gen.h  semihonest.h  semihonest_eva.h  semihonest_gen.h
test/: CMakeLists.txt  test-bit.cpp  test-float.cpp  test-int.cpp  test-pqot.cpp  test-pqyao.cpp
